--- a/css/style.css
+++ b/css/style.css
@@ -561,8 +561,8 @@ input[type=number] {
   position: absolute;
   top: 20px;
   right: 20px;
-  width: 60px;
-  height: 23px;
+  width: 35px;
+  height: 22px;
   flex-direction: column;
   justify-content: space-between;
   z-index: 10;
@@ -574,6 +574,19 @@ input[type=number] {
   height: 3px;
   background-color: #4AF6CD;
   border-radius: 10px;
+  transition: transform 0.5s;
+}
+
+.menu-btn.clicked .menu-btn__line:nth-child(2) {
+  opacity: 0;
+}
+
+.menu-btn.clicked .menu-btn__line:nth-child(1) {
+  transform: translateY(9px) rotate(45deg);
+}
+
+.menu-btn.clicked .menu-btn__line:nth-child(3) {
+  transform: translateY(-9px) rotate(-45deg);
 }
 
 .menu__item {
